--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "email": "hulangfy@163.com"
     }],
     "require": {
-        "php": ">=7.2.5",
-        "topthink/think-orm": "^2.0|^3.0"
+        "php": ">=8.0.0",
+        "topthink/think-orm": "^3.0"
     },
     "autoload": {
         "psr-4": {
